--- a/DublinBike/DublinBike/Views/Bike/Details.cshtml
+++ b/DublinBike/DublinBike/Views/Bike/Details.cshtml
@@ -23,22 +23,22 @@
                 @Html.DisplayFor(model => model.Name)
             </dd>
             <dt class="col-sm-2">
-                @Html.DisplayNameFor(model => model.Adress)
+                @Html.DisplayNameFor(model => model.adress)
             </dt>
             <dd class="col-sm-10">
-                @Html.DisplayFor(model => model.Adress)
+                @Html.DisplayFor(model => model.adress)
             </dd>
             <dt class="col-sm-2">
-                @Html.DisplayNameFor(model => model.Latitude)
+                @Html.DisplayNameFor(model => model.latitude)
             </dt>
             <dd class="col-sm-10">
-                @Html.DisplayFor(model => model.Latitude)
+                @Html.DisplayFor(model => model.latitude)
             </dd>
             <dt class="col-sm-2">
-                @Html.DisplayNameFor(model => model.Longitude)
+                @Html.DisplayNameFor(model => model.longitude)
             </dt>
             <dd class="col-sm-10">
-                @Html.DisplayFor(model => model.Longitude)
+                @Html.DisplayFor(model => model.longitude)
             </dd>
         </dl>
     </div>
